[package]
name = "free-os"
version = "0.1.0"
authors = ["Jonas <jonas@jmp.blue>"]
edition = "2018"

[profile.dev]
panic = "abort"

[build]
target = "x86_64-unknown-none.json"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"